# QtLiveClient

./: .gitignore  CMakeLists.txt  README.md  build.bat  installer_license.txt  package.bat
installer/: NSIS.InstallOptions.ini
src/: main.cpp
src/core/: app_settings.cpp  app_settings.h  bilibili_utils.cpp  bilibili_utils.h  constants.h  grid_layout.cpp  grid_layout.h
src/proxy/: local_stream_proxy.cpp  local_stream_proxy.h
src/ui/: bilibili_live_window.cpp  bilibili_live_window.h  live_stream_tile.cpp  live_stream_tile.h
